[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Spaceship-shooter-environment/spritesheets/ship.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Trail.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "turnLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "turnRight",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.03455
height = 0.0

[sub_resource type="CircleShape2D" id=9]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 4
collision_mask = 2147483659
script = ExtResource( 1 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 18, 0 )

[node name="FirePoint2" type="Node2D" parent="."]
position = Vector2( 27.4033, 0 )

[node name="Trail" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.537255, 0.635294, 0.913725, 1 )
position = Vector2( -4.40972, 0.081871 )
MAX_LENGTH = 6
THICKNESS = 1.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
scale = Vector2( 1, 1.003 )
shape = SubResource( 8 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
modulate = Color( 1, 1, 1, 0.2 )
shape = SubResource( 9 )

[node name="Invuln_Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="Invuln_Timer" to="." method="_on_Invuln_Timer_timeout"]

[editable path="Trail"]
